src/App.css
*,
*:before,
*:after {
  box-sizing: inherit;
}

html {
  height: 100%;
  box-sizing: border-box;
}

body {
  position: relative;
  margin: 0;
  min-height: 100%;
  background: #7DCED7;
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
}

.container-main {
  min-height:100%;
  padding-bottom: 50px;
}

.container-fluid {
  padding: 0;
}

.header {
  padding: 10px 0 0;
  height: 80px;
  width: 100%;
  background-color: #20465C;
  color: white;
  text-align: center;
  font-size: 10px;
  line-height: 200%;
  font-family: Arial, Helvetica, sans-serif;
}

.header h1 {
  font-size: 24px;
  text-align: center;
  color: #D1DAD3;
  font-weight: bold;
  margin-bottom: 10px;
}

.header h2 {
  font-size: 18px; 
  color: #7DCED7;
  text-align: center;
}

.searchForm {
  padding: 10px 0 20px 0;
  font-size: 16px;
  margin: 0 auto;
}

@media only screen and (max-width: 768px) {
  .searchForm {
    max-width: 332px;
  }
}

.form-control, 
.btn {
  font-size: 16px;
}

.btn-success {
  background-color: #20465C;
  color: #D1DAD3;
  border-color: rgb(51, 105, 136);
}
 
.btn-success:hover, .btn-success:focus, .btn-success:not(:disabled):not(.disabled):active:focus {
  background-color: #3199CB;
  border-color: rgb(51, 105, 136);
  box-shadow: none;
}

.footer {
  position:absolute;
  bottom:0;
  width:100%;
  height:30px;

  /* position: fixed; */
  /* left: 0; */
  /* bottom: 0; */
  /* width: 100%; */
  margin-top: 10px;
  background-color: #20465C;
  color: #D1DAD3;
  text-align: center;
  font-size: 12px;
  line-height: 250%;
  font-family: Arial, Helvetica, sans-serif;
}

.footer a {
  color: #D1DAD3;
  padding: 0 5px;
}

.my-select  {
  width: 270px;
}

.loader {
  background: url('/images/loader.gif');
  width: 274px;
  height: 230px;
  margin: 50px auto 0;
}

.flight-results {
  padding: 0 20px 5px;
  border-radius: 10px;
  position: relative;
  border: 1px dotted #20465C;
  background: rgba(255,255,255,0.5);
}

.flight-results h2 {
  color: #20465C;
  text-align: center;
  padding: 10px 0;
  font-size: 26px;
  border-radius: 10px;
  line-height: 150%;
  margin-bottom: 10px;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.flight-results .card {
  cursor: pointer;
  margin-bottom: 10px;
  border-radius: 5px;
  border: 1px solid #20465C;
  margin: 0 auto 10px;
}

.flight-results .card .card-body {
  font-size: 15px;
}

.flight-results .col {
  padding-right:7px;
  padding-left:7px;
}

@media only screen and (max-width: 1199px) {
  .flight-results .col {
    padding-right:5px;
    padding-left:5px;
  } 
}

.flight-results .flight-flag {
  position: absolute;
  width: 32px;
  height: 32px;
  right: 10px;
  top: 10px;
  border: 1px dotted #D1DAD3;
  border-radius: 16px;
}

.flight-results .flight-image {
  position: relative;
  overflow: hidden;
  text-align: center;
}
.flight-results .flight-image img {
  max-width: 100%;  
  -moz-transition: all 0.3s;
  -webkit-transition: all 0.3s;
  transition: all 0.8s;
  text-align: center;
  /* max-height: 221px; */
}

.flight-results .card:hover .flight-image img {
  opacity: 0.9;
  -moz-transform: scale(1.1);
  -webkit-transform: scale(1.1);
  transform: scale(1.1);
}

.flight-details img {
  max-width: 100%;
}

.flight-details .modal-header {
  padding: 0;
}

.flight-details .modal-header .close {
  position: absolute;
  top: 10px;
  color: white;
  opacity: 1;
  text-shadow: none;
  font-weight: normal;

}

@media only screen and (max-width: 575px) {
  .flight-details .modal-header .close {
    color: black;
    right: 10px;
  }
}

@media only screen and (min-width: 576px) {
  .flight-details .modal-header .close:not(:disabled):not(.disabled):focus, .flight-details .modal-header .close:not(:disabled):not(.disabled):hover {
    color: white;
  }

  .flight-details .modal-header .close {
    right: -3%;
  }
}

@media only screen and (min-width: 768px) {
  .flight-details .modal-header .close {
    right: -4%;
    font-size: 40px;
    /* font-size: 58px; */
  }
}

.flight-details .card-body .airlines-logo {
  width: 100px;
  font-size: 13px;
  color: 	#808080;
  float: right;
  width: auto;
  max-width: 100px;

}

.flight-details .card-body .airlines-logo img {
  width: 50px;
  float: right;
}

.flight-details .card-body .airlines-logo div {
  clear: both;
  text-align: right;
  padding-top: 5px;
}

.flight-details .flight-time {
  background: url('/images/connection.png') no-repeat;
  background-position: left center;
  padding-left: 21px;
  line-height: 24px;
}

.flight-details .card {
  clear: both;
}

.flight-time .card-text {
  margin-bottom: 8px;
}

.flight-time .flight-time-duration {
  color: 	#808080;
  padding-left: 10px;
}

.flight-details .flight-price {
  font-size: 22px;
  padding-top: 5px;
}

.flight-details .flight-price .btn-book {
  margin-top: -5px;
}

.arrow-both {
  background: url(/images/arrow-both.png) no-repeat;
  background-size: 100%;
  background-position: 0px 0px;
  width: 30px;
  height: 26px;
  display: inline-block;
  margin: 0 5px;
  opacity: 0.7;
}

.flight-details .flight-flag {
  position: absolute;
  width: 32px;
  height: 32px;
  right: 10px;
  top: 10px;
  border: 1px dotted #D1DAD3;
  border-radius: 16px;
}

@media only screen and (max-width: 575px) {
  .flight-details .flight-flag {
    right: none;
    left: 10px;
  }
}

@media only screen and (min-width: 576px) {
  .flight-details {
    width: 90%;
    max-width: 1000px;
  }
}

